feat: introduce 2.0.0-SNAPSHOT application