@@ -1,7 +1,13 @@
 package ui.javafx.components.charts.monthlyOverview;
 
+import controller.FinTracker;
+import exceptions.InvalidInput;
+import model.dto.DailyFinancialData;
+
 import java.time.LocalDate;
+import java.time.YearMonth;
 import java.time.format.TextStyle;
+import java.util.List;
 import java.util.Locale;
 
 import javafx.geometry.Pos;
@@ -15,9 +21,6 @@ import javafx.scene.layout.Region;
 import javafx.scene.layout.VBox;
 import javafx.scene.paint.Color;
 import javafx.scene.text.Font;
-import ui.javafx.components.FinancialData;
-
-// import java.util.Random;
 
 public class MonthlyOverview extends VBox {
 
@@ -30,16 +33,25 @@ public class MonthlyOverview extends VBox {
     private static final double CHART_HALF_HEIGHT = 150;
 
     private static final double CANDLE_WIDTH = 12;
-    private static final int DAYS_IN_MONTH = 31;
 
-    private double[] dailyValues = ui.javafx.components.FinancialData.dailyBalance();
+    // Days for month
+    private int daysInMonth = LocalDate.now().lengthOfMonth();
+
+    private final FinTracker finTracker;
+
+    private List<DailyFinancialData> dailyFinancialData;
+    private double[] dailyValuesTotal;
     private Canvas canvas;
 
     private LocalDate currentMonth = LocalDate.now().withDayOfMonth(1);
 
-    public MonthlyOverview() {
+    public MonthlyOverview(List<DailyFinancialData> dailyFinancialData, FinTracker finTracker) {
 
         setSpacing(10);
+
+        this.dailyFinancialData = dailyFinancialData;
+        this.dailyValuesTotal = getChartValuesAsArray();
+        this.finTracker = finTracker;
 
         this.canvas = new Canvas(CANVAS_WIDTH, CANVAS_HEIGHT);
         this.canvas.getStyleClass().add("monthly-chart");
@@ -55,16 +67,22 @@ public class MonthlyOverview extends VBox {
         Label title = new Label("Balanço Mensal");
         title.getStyleClass().addAll("title", "text-primary");
 
+        Label periodLabel = new Label(formatMonth(this.currentMonth));
+        periodLabel.getStyleClass().addAll("text-secondary", "month-label");
+
         Button prevButton = new Button("‹");
         prevButton.getStyleClass().add("month-nav-button");
-        prevButton.setOnAction(e -> changeMonth(-1));
-
-        Label periodLabel = new Label(formatMonth(currentMonth));
-        periodLabel.getStyleClass().addAll("text-secondary", "month-label");
+        prevButton.setOnAction(e -> {
+            changeMonth(-1);
+            periodLabel.setText(formatMonth(this.currentMonth));
+        });
 
         Button nextButton = new Button("›");
         nextButton.getStyleClass().add("month-nav-button");
-        nextButton.setOnAction(e -> changeMonth(1));
+        nextButton.setOnAction(e -> {
+            changeMonth(1);
+            periodLabel.setText(formatMonth(this.currentMonth));
+        });
 
         Region spacer = new Region();
         HBox.setHgrow(spacer, Priority.ALWAYS);
@@ -75,28 +93,53 @@ public class MonthlyOverview extends VBox {
         return header;
     }
 
+    private double[] getChartValuesAsArray() {
+        if (this.dailyFinancialData == null || this.dailyFinancialData.isEmpty()) {
+            return new double[] { 0.0 };
+        }
+
+        double[] list = new double[daysInMonth];
+        this.dailyFinancialData.forEach(data -> {
+            list[data.getDayOfMonth() - 1] = data.getBalance().doubleValue();
+        });
+
+        return list;
+    }
+
+    public void refreshData(List<DailyFinancialData> dailyFinancialData) {
+
+        this.daysInMonth = this.currentMonth.lengthOfMonth();
+        this.dailyFinancialData = dailyFinancialData;
+        this.dailyValuesTotal = getChartValuesAsArray();
+
+        this.drawChart();
+    }
+
     private void changeMonth(int delta) {
-        currentMonth = currentMonth.plusMonths(delta);
-        this.dailyValues = FinancialData.dailyBalanceFor(currentMonth.getYear(), currentMonth.getMonthValue());
-        drawChart();
+        this.currentMonth = currentMonth.plusMonths(delta);
+        try {
+            this.refreshData(this.finTracker.getMonthlyOverview(YearMonth.from(currentMonth)));
+        } catch (InvalidInput e) {
+            e.printStackTrace();
+        }
     }
 
     private String formatMonth(LocalDate date) {
-        String month = date.getMonth().getDisplayName(TextStyle.FULL, new Locale("pt", "BR"));
+        String month = date.getMonth().getDisplayName(TextStyle.FULL, Locale.of("pt", "BR"));
         return Character.toUpperCase(month.charAt(0)) + month.substring(1) + " " + date.getYear();
     }
 
     private void drawChart() {
-        GraphicsContext gc = canvas.getGraphicsContext2D();
+        GraphicsContext gc = this.canvas.getGraphicsContext2D();
 
         gc.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
 
         double maxAbsValue = 0;
-        for (double v : dailyValues) {
+        for (double v : dailyValuesTotal) {
             maxAbsValue = Math.max(maxAbsValue, Math.abs(v));
         }
 
-        AxisScale scale = new AxisScale(maxAbsValue, 4); 
+        AxisScale scale = new AxisScale(maxAbsValue, 4);
 
         drawGrid(gc, scale);
         drawAxisLines(gc);
@@ -107,6 +150,7 @@ public class MonthlyOverview extends VBox {
     }
 
     private void drawGrid(GraphicsContext gc, AxisScale scale) {
+        gc.save();
 
         gc.setStroke(Color.web("#28282C"));
         gc.setLineWidth(1);
@@ -118,9 +162,12 @@ public class MonthlyOverview extends VBox {
                 gc.strokeLine(CHART_START_X, CENTER_Y + offset, CHART_END_X, CENTER_Y + offset);
             }
         }
+
+        gc.restore();
     }
 
     private void drawAxisLines(GraphicsContext gc) {
+        gc.save();
 
         gc.setLineWidth(1);
         gc.setStroke(Color.web("#9A9A9E"));
@@ -128,18 +175,25 @@ public class MonthlyOverview extends VBox {
         gc.strokeLine(CHART_START_X, CENTER_Y, CHART_END_X, CENTER_Y);
         gc.strokeLine(CHART_START_X, CENTER_Y - CHART_HALF_HEIGHT - 15,
                 CHART_START_X, CENTER_Y + CHART_HALF_HEIGHT + 15);
+
+        gc.restore();
     }
 
     private void drawCandles(GraphicsContext gc, AxisScale scale) {
+        gc.save();
 
         double chartWidth = CHART_END_X - CHART_START_X;
-        double dayWidth = chartWidth / DAYS_IN_MONTH;
+        double dayWidth = chartWidth / daysInMonth;
 
-        for (int day = 0; day < DAYS_IN_MONTH; day++) {
+        for (int day = 0; day < dailyValuesTotal.length; day++) {
 
-            double x = CHART_START_X + 10 + day * dayWidth * 0.95;
-            double value = dailyValues[day];
-            double height = (Math.abs(value) / scale.maxTick) * CHART_HALF_HEIGHT;
+            double centerX = CHART_START_X + (day * dayWidth) + (dayWidth / 2.0);
+            double x = centerX - (CANDLE_WIDTH / 2.0);
+            double value = dailyValuesTotal[day];
+
+            double height = Math.min(
+                    (Math.abs(value) / scale.maxTick) * CHART_HALF_HEIGHT,
+                    CHART_HALF_HEIGHT);
 
             if (value >= 0) {
                 gc.setFill(Color.web("#34D399"));
@@ -149,12 +203,16 @@ public class MonthlyOverview extends VBox {
                 gc.fillRect(x, CENTER_Y, CANDLE_WIDTH, height);
             }
         }
+
+        gc.restore();
     }
 
     private void drawYAxisLabels(GraphicsContext gc, AxisScale scale) {
+        gc.save();
 
         gc.setFill(Color.web("#9A9A9E"));
         gc.setFont(Font.font(11));
+        gc.setTextAlign(javafx.scene.text.TextAlignment.LEFT); 
 
         for (double tick : scale.ticks) {
             double offset = (tick / scale.maxTick) * CHART_HALF_HEIGHT;
@@ -165,20 +223,41 @@ public class MonthlyOverview extends VBox {
                 gc.fillText("-" + label, 2, CENTER_Y + offset + 4);
             }
         }
+
+        gc.restore();
     }
 
     private void drawXAxisLabels(GraphicsContext gc) {
+        gc.save();
 
         gc.setFill(Color.web("#9A9A9E"));
         gc.setFont(Font.font(11));
+        gc.setTextAlign(javafx.scene.text.TextAlignment.CENTER);
 
         double chartWidth = CHART_END_X - CHART_START_X;
-        double dayWidth = chartWidth / DAYS_IN_MONTH;
+        double dayWidth = chartWidth / daysInMonth;
 
-        for (int day = 1; day <= DAYS_IN_MONTH; day += 5) {
-            double x = CHART_START_X + day * dayWidth;
-            gc.fillText(String.valueOf(day), x, CENTER_Y + CHART_HALF_HEIGHT + 30);
+        List<Integer> labelDays = new java.util.ArrayList<>();
+        for (int day = 1; day <= daysInMonth; day += 5) {
+            labelDays.add(day);
         }
+
+        int lastLabeled = labelDays.get(labelDays.size() - 1);
+        if (lastLabeled != daysInMonth) {
+            if (daysInMonth - lastLabeled < 3) {
+                labelDays.set(labelDays.size() - 1, daysInMonth);
+            } else {
+                labelDays.add(daysInMonth);
+            }
+        }
+
+        for (int day : labelDays) {
+            int index = day - 1;
+            double centerX = CHART_START_X + (index * dayWidth) + (dayWidth / 2.0);
+            gc.fillText(String.valueOf(day), centerX, CENTER_Y + CHART_HALF_HEIGHT + 30);
+        }
+
+        gc.restore();
     }
 
     private String formatCurrency(double value) {
